--- a/site/style.css
+++ b/site/style.css
@@ -23,13 +23,13 @@ img {vertical-align: bottom;}
     align-items: center;}
 .gnb {}
 .gnb ul {
-    display: flex;
+    /* display: flex; */
     justify-content: flex-end;
     align-items: center;}
 .gnb li {}
 .gnb a {
     display: block;
-    padding: 5px;
+    padding: 10px;
     font-size: 14px;}
 
 /* 메인이미지설정 */
@@ -37,7 +37,9 @@ img {vertical-align: bottom;}
     max-width: 100%;}
 
 /* 공지사항설정 */
-.notice {}
+.notice {
+    border: 5px solid #ddd;
+    padding: 20px;}
 .notice h2 {
     margin-bottom: 5px;
     font-size: 18px;
@@ -60,6 +62,51 @@ img {vertical-align: bottom;}
     margin-left: 40px;
     padding-left: 10px;}
 
+/* sns 설정 */
+.sns {}
+.sns h2 {
+    font-size: 14px;
+    background-color: #ddd;
+    text-align: center;
+    padding: 10px;
+    margin-bottom: 20px;
+}
+.sns ul {}
+.sns li {}
+.sns a {
+    display: block;
+    padding: 10px;
+    font-size: 14px;
+    margin-bottom: 10px;
+    color: #fff;
+}
+.sns li:nth-child(1) a {background-color: #1da1f2;}
+.sns li:nth-child(2) a {background-color: #1877f2;}
+.sns li:nth-child(3) a {background-color: #f77737;}
+
+/* 말풍선 제너레이터연결 
+https://cssarrowplease.com/
+*/
+.sns h2 {
+	position: relative;
+	background: #ddd;
+}
+.sns h2:after {
+	top: 100%;
+	left: 50%;
+	border: solid transparent;
+	content: "";
+	height: 0;
+	width: 0;
+	position: absolute;
+	pointer-events: none;
+	border-color: rgba(221, 221, 221, 0);
+	border-top-color: #ddd;
+	border-width: 15px;
+	margin-left: -15px;
+}
+
+
 /* 푸터설정 */
 .box5 {
     background-color: #ddd;
@@ -79,7 +126,48 @@ img {vertical-align: bottom;}
     padding: 15px 10px;
 }
 .box5 {}
+.box4-1 {padding: 10px 0;}
+.box4-2 {padding: 10px 0;}
+.box6 {padding-top: 25px;}
+.box6>div {padding-bottom: 5px;}
 
+/* 박스6번 설정 */
+.box6 a {
+    background-color: #666;
+    display: block;
+    text-align: center;
+    color: #fff;}
+.box6-1 a {background-color: #bfbd13;}
+.box6-2 a {background-color: #c58839;}
+.box6-3 a {background-color: #859f46;}
+.box6 i {
+    padding: 40px 0;
+    font-size: 38px;}
+.box6 h2 {
+    background-color: #222;
+    padding: 15px 0;
+    font-size: 20px;
+}
+.box6 p {
+    background-color: #524e3c;
+    font-size: 14px;
+    padding: 15px 0;
+}
+
+/* menuBtn 설정 */
+.menuBtn {
+    padding: 5px;
+    border: none;
+    cursor: pointer;
+    position: fixed;
+    top: 20px;
+    right: 20px;}
+.menuBtn i {
+    font-size: 18px;}
+
+/* 메뉴를 토글을 클릭했을때만 보이게 하는 설정 */
+.gnb {
+    display: none;}
 
 
 
@@ -101,7 +189,30 @@ img {vertical-align: bottom;}
 .gnb ul {
     display: flex;
     justify-content: flex-end;
-    align-items: center;}
+    align-items: center;
+    margin-left: 20px;}
+
+/* 박스 4-1과 박스 4-2의 가로정렬 */
+.box4 {
+    display: flex;}
+.box4-1 {
+    width: 70%;
+    padding-right: 35px;
+    box-sizing: 30px;}
+.box4-2 {width: 30%;}
+
+/* 박스6-1,-2,-3 r가로설정 */
+.box6 {
+    display: flex;
+    justify-content: space-around;}
+.box6>div {width: 32%;}
+
+/* memuBtn */
+.menuBtn {display: none;}
+
+/* 메뉴를 토글을 클릭했을때만 보이게 하는 설정 */
+.gnb {
+    display: block !important;}
 
 
 
@@ -110,7 +221,7 @@ img {vertical-align: bottom;}
 /* -- 와이드데스크탑설정 */
 @media (min-width:1280px) {
 
-    .boxA, .copyright, .box3, .box4 {
+    .boxA, .copyright, .box3, .box4, .box6 {
         width: 1140px;
         margin: 0 auto;
     }
