--- a/nike/style.css
+++ b/nike/style.css
@@ -4,52 +4,161 @@
 
 /* 
 구글폰트정보
-    font-family: "Monoton", sans-serif;
-    font-family: "Play", sans-serif;
+  font-family: "Monoton", sans-serif;
+  font-family: "Play", sans-serif;
+
 
 */
 
+
+
 /* 전체설정 */
-* {margin: 0;
-    padding: 0;}
-a {text-decoration: none;
-    color: #bbb;}
-ul ol {list-style: none;}
-img {vertical-align: bottom;}
-body {position: fixed;
+* {
+    margin: 0;
+    padding: 0;
+}
+
+a {
+    text-decoration: none;
+    color: #bbb
+}
+
+ul,
+ol {
+    list-style: none;
+}
+
+img {
+    vertical-align: bottom;
+}
+
+body {
+    position: fixed;
     width: 100%;
     height: 100%;
-    background-color: #111;}
+    background-color: #111;
+}
+
 
 /* 배경동영상 */
+
 .vid {
     position: fixed;
     width: 100%;
     height: 100%;
     left: 0;
     top: 0;
-    opacity: 0.9;}
+    opacity: 0.9;
+}
+
 .vid video {
     width: 100%;
-    min-width: 1600px;}
+    min-width: 1600px;
+}
 
 /* 로고설정 */
 h1 {
     position: fixed;
     left: 40px;
     top: 40px;
-    z-index: 9999;}
+    z-index: 9999;
+}
 
 /* header설정 */
 header {
     position: fixed;
     height: 100%;
     width: 700px;
-    background:linear-gradient(-45deg, #e6fc55,#b9fb05);
+    background: linear-gradient(-45deg, #e6fc55, #b9fb05);
     transform: skewX(-40deg);
-    left: -420px;}
+    left: -420px;
+}
 
-/* side 설정 */
+/* gnb설정 */
+.gnb {
+    position: absolute;
+    width: 220px;
+    top: 150px;
+    right: 0;
+
+}
+
+.gnb>li {
+    position: relative;
+}
+
+.gnb>li>a {
+    display: block;
+    width: 220px;
+    height: 50px;
+    font-family: "Play", sans-serif;
+    font-size: 18px;
+    font-weight: bold;
+    color: #222;
+    text-align: right;
+    padding-right: 40px;
+
+    box-sizing: border-box;
+    line-height: 3;
+}
+
+.gnb em {
+    transform: skewX(40deg) !important;
+    display: inline-block;
+}
+
+/* transform 속성은 display가 블럭성질에 해당하는 경우만 적용된다. */
+.gnb>li:hover>a {
+    background-color: #000;
+    color: #fff;
+}
+
+.gnb>li.on>a {
+    background-color: #000;
+    color: #fff;
+}
+
+
+/* 2뎁스 설정 */
+.gnb ul {
+    position: absolute;
+    left: 0px;
+    top: 0;
+    transition: all 0.4s;
+    opacity: 0;
+}
+
+.gnb ul li {}
+
+.gnb ul li a {
+    display: block;
+    font-size: 16px;
+    line-height: 2.5;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    /* font: bold 16px/2.5 arial */
+    background-color: #222;
+    color: #fff;
+    margin-bottom: 3px;
+    border-bottom: 1px solid #b9fb05;
+    width: 150px;
+    height: 40px;
+    padding-left: 50px;
+    box-sizing: border-box;
+}
+
+.gnb>li:hover ul {
+    opacity: 0.8;
+    left: 205px;
+}
+.gnb>li.on ul {
+    opacity: 0.8;
+    left: 205px;
+}
+
+
+
+/* side설정 */
 .side {
     width: 800px;
     height: 100%;
@@ -60,6 +169,7 @@ header {
     bottom: 0;
     transform: skewX(-40deg);
 }
+
 .con {
     position: absolute;
     width: 400px;
@@ -69,3 +179,4 @@ header {
     top: 0;
     margin-left: -200px;
 }
+
