--- a/starbucks/style.css
+++ b/starbucks/style.css
@@ -2,6 +2,7 @@
 @charset 'utf-8';
 
 /* 전체설정 */
+
 * {
     margin: 0;
     padding: 0;
@@ -21,7 +22,9 @@ img {
     vertical-align: bottom;
 }
 
-/* header 설정 */
+
+/* 헤더설정 */
+
 header {
     background-color: #F6F5EF;
     border-bottom: 1px solid #000;
@@ -62,11 +65,9 @@ header {
 
 .header_inner nav li {}
 
-.header_inner nav a {
-    display: block;
-    font-size: 13px;
-    color: #333;
-}
+.header_inner nav a {display: block;
+                    font-size: 13px;
+                color: #333;}
 
 .header_inner .util {
     position: absolute;
@@ -87,78 +88,211 @@ header {
 }
 
 .header_inner .util form {}
-.header_inner .util form div {
-    background-color: #fff;
-    border: 1px solid #ccc;
-    padding: 2px 5px;
-    border-radius: 4px;
-}
-.header_inner .util form input {
-    width: 100px;
-    border: none;
-    font-size: 10px;
-}
+.header_inner .util form div {background-color: #fff;
+                                border: 1px solid #ccc;
+                            padding: 2px 5px;
+                        border-radius: 4px;}
+.header_inner .util form input {width: 100px;
+                                border: none;
+                            font-size: 10px;}
 .header_inner .util form i {margin-left: 5px;}
 
-/* 컨텐츠 전체설정 */
-.wrap {
-    padding-top: 115px;
+/* 콘텐츠전체설정 */
+
+.wrap  {padding-top: 115px;}
+
+/* 첫번째섹션설정 */
+section:nth-child(1) {display: flex;
+justify-content: center;
+padding: 50px 0;
+background-image:url(img/2024_summer_promotion_bg.jpg) ;
+background-size: cover;
+background-position: center;}
+section:nth-child(1) .hero {   
+                            display: flex;
+                        flex-direction: column;
+                    justify-content: center;
+                align-items: center;}
+section:nth-child(1) .hero span {margin-top: 50px;}
+section:nth-child(1) .hero span a {display: block;
+font-size: 15px;
+color: #13362d;
+border: 1px solid #13362d;
+padding: 10px 15px;
+border-radius: 5px;
+transition: all 0.8s;}
+
+section:nth-child(1) .hero span a:hover {background-color: #13362d;
+                                        text-decoration: underline;
+                                        color: #fff;}
+
+
+
+section:nth-child(1) .mainImg {
+                                display: flex;
+                            justify-content: center;}
+.mainImg img:nth-child(1) {transform: translateX(50px);}
+.mainImg img:nth-child(2) {}
+.mainImg img:nth-child(3) {transform: translateX(-70px);}
+
+/* 두번째섹션설정 */
+
+section:nth-child(2) {display: flex;
+height: 62px;}
+section:nth-child(2) .notice {background-color: #111;
+    width: 50%;
+color: #fff;
+display: flex;
+justify-content: flex-end;}
+section:nth-child(2) .promo {background-color: #f6f5ef ;
+width: 50%;}
+
+/* 공지사항설정 */
+
+.notice li a {color: #fff;
+display: block;
+font-size: 13px;
+padding: 5px 0;}
+
+.notice_inner {display: flex;
+justify-content: space-between;
+align-items: center;
+width: 100%;}
+.notice_inner ul {position: relative;
+width: 70%;
+height: 24px;
+overflow: hidden;}
+.notice_inner li {position: absolute;
+background-color: #111;
+left: 0;
+top: 100%;
+transition: all 0.8s;
 }
-/* 첫번째 섹션 설정 */
-section:nth-child(1) {
+.notice_inner li:nth-child(1) {left: 0;
+    top: 0;}
+
+    .notice_inner li:hover {top: 0;}
+
+
+    section:nth-child(2) h2 {font-size: 14px;}
+    section:nth-child(2) span {margin-right: 20px;}
+    section:nth-child(2) span a {width: 30px;
+    height: 30px;
     display: flex;
-    justify-content: center;
-    padding: 50px 0;
-    background-image: url(img/2024_summer_promotion_bg.jpg);
-    background-size: cover;
-    background-position: center;}
-section:nth-child(1) .hero {
-    display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
-section:nth-child(1) .hero span {
-    margin-top: 50px;
-}
-section:nth-child(1) .hero span a {
-    display: block;
-    font-size: 15px;
-    color: #13363d;
-    border: 1px solid #13362d;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: all 0.8s;
-}
-
-section:nth-child(1) .hero span a:hover {
-    background-color: #13362d;
-    text-decoration: underline;
-    color: #fff;
-}
-
-section:nth-child(1) .mainimg {
-    display: flex;
-    justify-content: center;
-}
-
-.mainimg img:nth-child(1) {transform: translateX(50px);}
-.mainimg img:nth-child(2) {}
-.mainimg img:nth-child(3) {transform: translateX(-70px);}
-
-
-
-
-/* 미디어쿼리구간설정 ############################################################################################## */
-
-/* 와이드데스크탑설정 */
-
-/* 1280px 이상일떄 */
-@media(min-width: 1280px) {
-    .header_inner{
-         width: 1240px;
-         margin: 0 auto;
+    border-radius: 50%;
+    border: 1px solid #fff;
     }
-       
+    .notice span a {color: #fff;
+        padding-bottom: 5px;
+        box-sizing: border-box;
+        
+}
+
+
+/* 프로모션설정 */
+.promo {display: flex;
+        align-items: center;}
+
+.promo_inner {display: flex;
+align-items: center;
+width: 100%;}
+
+
+.promo_inner h2 {width: 50%;
+text-align: center;}
+.promo_inner span {width: 50%;}
+section:nth-child(2) .promo_inner span a {border-color: #000;}
+
+
+
+
+
+/*세번째 섹션설정  */
+section:nth-child(3) {background-color: #1e3932;
+                        color: #fff;
+                    padding-top: 30px;
+                padding-bottom: 30px;}
+
+.reward_inner {display: flex;
+                justify-content: space-between;}
+.reward_inner .imgBox {width: 220px;
+                        text-align: center;}
+.reward_inner .txtBox {width: calc(100% - 220px);}
+
+
+.reward_inner .txtBox .topBox{display: flex;
+    flex-wrap: wrap;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+    padding-bottom: 15px;
+}
+.reward_inner .txtBox .topBox h2 {width: 100%;
+                                padding-bottom: 10px;}
+.reward_inner .txtBox .topBox .text {width: 70%;}
+.reward_inner .txtBox .topBox .btn {width: 30%;}
+.reward_inner .txtBox .topBox .btn ul {display: flex;
+                                        justify-content: flex-end;}
+.reward_inner .txtBox .topBox .btn li {margin-left: 8px;}
+.reward_inner .txtBox .topBox .btn a {display: flex;
+                                    background-color: #00704a;
+                                    color: #fff;
+                                font-size: 14px;
+                                height: 38px;
+                                justify-content: center;
+                                align-items: center;
+                                padding: 0 20px;
+                                border-radius: 4px;
+                                border: 2px solid #00704a;
+                                }
+
+.reward_inner .txtBox .topBox .btn li:nth-child(2) a {background-color: transparent;
+                                                    border-color:  #ffff;}
+
+
+.reward_inner .txtBox .bottomBox {display: flex;
+justify-content: space-between;
+padding-top:15px ;}
+
+.reward_inner .txtBox .bottomBox .text {width: 70%;}
+
+.reward_inner .txtBox .bottomBox .btn {width: 30%;}
+
+.reward_inner .txtBox .bottomBox .btn ul {display: flex;
+                                        justify-content: flex-end;
+                                        align-items: center;}
+
+ .reward_inner .txtBox .bottomBox .btn li {}
+ .reward_inner .txtBox .bottomBox .btn a {display: flex;
+ 
+    color: #fff;
+font-size: 14px;
+height: 38px;
+justify-content: center;
+align-items: center;
+padding: 0 3px;
+border-radius: 4px;
+border: 2px solid #fff ;
+letter-spacing:-1px;
+}
+
+
+
+
+/* 미디어쿼리구간설정############################################### */
+
+/* 와이드데스크탑 설정 */
+
+/* 1280px 이상일때설정 */
+@media(min-width:1280px){
+
+
+    .header_inner , .reward_inner{width: 1240px;
+                    margin: 0 auto;}
+
+    .notice_inner {width: 620px;
+               
+    }
+    .promo_inner{width: 620px;}
 
 }
