--- a/website/style01_0612.css
+++ b/website/style01_0612.css
@@ -16,8 +16,7 @@ header {
 }
 .header_inner {
     display: flex;
-    position: relative;
-    align-items: flex-end;
+    align-items: center;
 }
 .header_inner h1 {
     width: 175px;
@@ -25,36 +24,79 @@ header {
 }
 .header_inner h1 a {}
 .header_inner h1 a img {
-    max-width: 75px;
+    max-width: 100px;
     width: 100%;
 }
+
 .header_inner nav {
-    width: calc(100% - 75px);
+    width: calc(100% - 175px);
     padding: 10px;
+    position: relative;
 }
 .header_inner nav ul {
     display: flex;
     width: 100%;
     justify-content: space-around;
-    font-weight: bold;
+    background-color: red;
 }
+
+/* 메뉴아이콘설정부분 */
+/* .header_inner nav span {position: absolute;
+right: -40px;
+top: 0;
+width: 40px;
+height: 40px;
+background-color: royalblue;} */
+
+.utill {
+    position: absolute;
+}
+.utill ul {}
+.utill li {}
+.utill li a {}
+.utill li img {
+    width: 100%;
+    right: -40px;
+    top: 0;
+    width: 30px;
+    background-color: royalblue;
+}
+
+
+
 .header_inner nav li {}
 .header_inner nav a {
     display: block;
     font-size: 15px;
     color: #555;
+    font-weight: bold;
 }
 
 /* wrap 설정 */
 .wrap {}
 
 /* 첫번째 섹션 설정 */
-.titleBox {}
-.titleBox .text {}
-.titleBox h2 {}
-.titleBox h1 {}
-.titleBox p {}
-.titleBox span a {
+section:nth-child(1) {
+    background-color: #555;
+    display: flex;
+    justify-content: center;
+    padding: 30px 0;
+}
+section:nth-child(1) .hero {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+section:nth-child(1) .hero h1 {
+    display: flex;
+    justify-content: right;
+}
+
+section:nth-child(1) .hero p {
+
+}
+section:nth-child(1) .hero span a {
     color: #239C4C;
     display: inline-block;
     padding: 8px 20px;
@@ -63,28 +105,42 @@ header {
     font-size: 14px;
     transition: all 0.5s;}
 
+/* 기관소개 설정 */
+
 /* 후원하기 설정 */
 
 
 
 
 /* 입양하기 설정 */
-.titleBox {}
-.listBox span {}
-.listBox ul {
+section:nth-child(4) {
+    background-color: antiquewhite;
+}
+section:nth-child(4) .titleBox {}
+section:nth-child(4) .listBox span {}
+section:nth-child(4) .listBox ul {
     display: flex;
     width: 100%;
     justify-content: center;
 }
-.listBox li {
+section:nth-child(4) .listBox li {
     padding: 25px;
 }
-.listBox li a {}
-.listBox li a img {}
+section:nth-child(4) .listBox li a {}
+section:nth-child(4) .listBox li a img {}
 
 /* 봉사하기 */
+section:nth-child(5) {
+}
+
 
 /* 공지사항 */
+section:nth-child(6) {
+    background-color: antiquewhite;
+}
+section:nth-child(6) .titleBox {}
+section:nth-child(6) .titleBox div {}
+
 
 
 
